--- a/app/src/main/res/layout/game_table_ranking_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_table_ranking_dialog_fragment.xml
@@ -31,24 +31,24 @@
                 android:id="@+id/tvRankingDialogPlayer1Name"
                 style="@style/TextViewRankingDialogTableContent"
                 android:layout_weight="7"
-                tools:text="Player 1"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                tools:text="Player 1" />
 
             <TextView
                 android:id="@+id/tvRankingDialogPlayer1Points"
                 style="@style/TextViewRankingDialogTableContent"
                 android:layout_weight="2"
-                tools:text="4"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                tools:text="4" />
 
             <TextView
                 android:id="@+id/tvRankingDialogPlayer1Score"
                 style="@style/TextViewRankingDialogTableContent"
                 android:layout_weight="3"
-                tools:text="200"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                tools:text="200" />
         </TableRow>
 
         <TableRow style="@style/TableRowRankingDialog">
@@ -57,24 +57,24 @@
                 android:id="@+id/tvRankingDialogPlayer2Name"
                 style="@style/TextViewRankingDialogTableContent"
                 android:layout_weight="7"
-                tools:text="Player 2"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                tools:text="Player 2" />
 
             <TextView
                 android:id="@+id/tvRankingDialogPlayer2Points"
                 style="@style/TextViewRankingDialogTableContent"
                 android:layout_weight="2"
-                tools:text="2"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                tools:text="2" />
 
             <TextView
                 android:id="@+id/tvRankingDialogPlayer2Score"
                 style="@style/TextViewRankingDialogTableContent"
                 android:layout_weight="3"
-                tools:text="100"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                tools:text="100" />
         </TableRow>
 
         <TableRow style="@style/TableRowRankingDialog">
@@ -83,24 +83,24 @@
                 android:id="@+id/tvRankingDialogPlayer3Name"
                 style="@style/TextViewRankingDialogTableContent"
                 android:layout_weight="7"
-                tools:text="Player 3"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                tools:text="Player 3" />
 
             <TextView
                 android:id="@+id/tvRankingDialogPlayer3Points"
                 style="@style/TextViewRankingDialogTableContent"
                 android:layout_weight="2"
-                tools:text="1"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                tools:text="1" />
 
             <TextView
                 android:id="@+id/tvRankingDialogPlayer3Score"
                 style="@style/TextViewRankingDialogTableContent"
                 android:layout_weight="3"
-                tools:text="-100"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                tools:text="-100" />
         </TableRow>
 
         <TableRow style="@style/TableRowRankingDialog">
@@ -109,24 +109,24 @@
                 android:id="@+id/tvRankingDialogPlayer4Name"
                 style="@style/TextViewRankingDialogTableContent"
                 android:layout_weight="7"
-                tools:text="Player 4"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                tools:text="Player 4" />
 
             <TextView
                 android:id="@+id/tvRankingDialogPlayer4Points"
                 style="@style/TextViewRankingDialogTableContent"
                 android:layout_weight="2"
-                tools:text="0"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                tools:text="0" />
 
             <TextView
                 android:id="@+id/tvRankingDialogPlayer4Score"
                 style="@style/TextViewRankingDialogTableContent"
                 android:layout_weight="3"
-                tools:text="-200"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                tools:text="-200" />
 
         </TableRow>
 
@@ -157,8 +157,8 @@
                 android:id="@+id/tvRankingDialogNumRounds"
                 style="@style/tvRankingDialogOthers"
                 android:layout_weight="5"
-                tools:text="16"
-                tools:ignore="HardcodedText" />
+                tools:ignore="HardcodedText"
+                tools:text="16" />
 
             <View
                 style="@style/tvRankingDialogOthers"
@@ -198,9 +198,9 @@
                         android:ellipsize="end"
                         android:gravity="center"
                         android:maxLines="1"
-                        tools:text="119"
                         android:textColor="@color/grayMM"
-                        tools:ignore="HardcodedText" />
+                        tools:ignore="HardcodedText"
+                        tools:text="119" />
 
                     <TextView
                         android:id="@+id/tvRankingDialogBestHandPlayerName"
@@ -209,9 +209,9 @@
                         android:ellipsize="end"
                         android:gravity="center"
                         android:maxLines="1"
-                        tools:text="Juanito"
                         android:textColor="@color/grayMM"
-                        tools:ignore="HardcodedText" />
+                        tools:ignore="HardcodedText"
+                        tools:text="Juanito" />
 
                 </LinearLayout>
 
