--- a/app/src/main/res/layout/main_oldgames_fragment.xml
+++ b/app/src/main/res/layout/main_oldgames_fragment.xml
@@ -107,7 +107,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:layout_margin="@dimen/double_standard_margin"
+        android:layout_margin="@dimen/standard_margin"
         android:src="@drawable/ic_play_arrow_white_24px" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
