--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,7 +6,6 @@
     <dimen name="half_standard_margin">8dp</dimen>
     <dimen name="standard_margin">16dp</dimen>
     <dimen name="standard_and_half_margin">24dp</dimen>
-    <dimen name="double_standard_margin_minus_two">30dp</dimen>
     <dimen name="double_standard_margin">32dp</dimen>
     <dimen name="triple_standard_margin">48dp</dimen>
     <dimen name="quadruple_standard_margin">64dp</dimen>
@@ -28,5 +27,9 @@
     <dimen name="table_player_name_text_size">32sp</dimen>
     <dimen name="table_player_penalty_points_text_size">20sp</dimen>
     <dimen name="table_player_round_num_text_size">28sp</dimen>
+
+    <!--  PROGRESS  -->
+    <dimen name="progress_size">80dp</dimen>
+    <dimen name="progress_margin">4dp</dimen>
 
 </resources>
