--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -29,12 +29,12 @@
 
     <ProgressBar
         android:id="@+id/pbMain"
-        android:layout_gravity="end|bottom"
-        android:visibility="gone"
-        tools:visibility="visible"
         android:layout_width="@dimen/progress_size"
         android:layout_height="@dimen/progress_size"
-        android:layout_margin="@dimen/progress_margin" />
+        android:layout_gravity="end|bottom"
+        android:layout_margin="@dimen/progress_margin"
+        android:visibility="gone"
+        tools:visibility="visible" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
 
