Improved dice names and names change appearing at start when proceed

--- a/app/src/main/res/layout/game_dice_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_dice_dialog_fragment.xml
@@ -73,7 +73,9 @@
         android:layout_marginStart="@dimen/triple_standard_margin"
         android:text="@string/second"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:visibility="invisible"
+        tools:visibility="visible" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -93,8 +95,10 @@
             android:layout_marginEnd="16dp"
             android:layout_weight="1"
             android:adjustViewBounds="true"
+            android:visibility="invisible"
             app:srcCompat="@drawable/one"
-            tools:ignore="ContentDescription" />
+            tools:ignore="ContentDescription"
+            tools:visibility="visible" />
 
         <ImageView
             android:id="@+id/ivDice4"
@@ -103,8 +107,10 @@
             android:layout_marginStart="16dp"
             android:layout_weight="1"
             android:adjustViewBounds="true"
+            android:visibility="invisible"
             app:srcCompat="@drawable/one"
-            tools:ignore="ContentDescription" />
+            tools:ignore="ContentDescription"
+            tools:visibility="visible" />
 
     </LinearLayout>
 
