--- a/app/src/main/res/layout/game_table_seat_south.xml
+++ b/app/src/main/res/layout/game_table_seat_south.xml
@@ -18,7 +18,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rlTableSeatSouthContainer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:ignore="RtlHardcoded">
 
     <ImageView
         android:id="@+id/ivTableSeatSouthSeatWindIcon"
@@ -77,7 +78,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvTableSeatSouthPoints"
         android:layout_centerHorizontal="true"
-        android:textSize="@dimen/table_player_name_text_size"
-        tools:text="@string/player_south_name" />
+        android:text="@string/player_south_name" />
 
 </RelativeLayout>
