--- a/app/src/main/res/layout/game_table_seat_west.xml
+++ b/app/src/main/res/layout/game_table_seat_west.xml
@@ -19,7 +19,6 @@
     android:id="@+id/rlTableSeatWestContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="bottom"
     android:paddingBottom="@dimen/double_standard_margin">
 
     <ImageView
@@ -79,7 +78,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvTableSeatWestPoints"
         android:layout_centerHorizontal="true"
-        android:textSize="@dimen/table_player_name_text_size"
-        tools:text="@string/player_west_name" />
+        android:text="@string/player_west_name" />
 
 </RelativeLayout>
