--- a/app/src/main/res/layout/game_table_seats_fragment.xml
+++ b/app/src/main/res/layout/game_table_seats_fragment.xml
@@ -15,10 +15,10 @@
     along with this program.  If not, see <https://www.gnu.org/licenses/>.
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/standard_margin"
-    android:background="@android:color/white">
+    tools:background="@android:color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -46,34 +46,32 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerVertical="true"
-        android:baselineAligned="false"
         android:clickable="false"
-        android:focusable="false"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <include
-            layout="@layout/game_table_seat_north"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/purpleDark" />
-
-        <View
-            android:layout_width="@dimen/triple_standard_margin"
-            android:layout_height="@dimen/triple_standard_margin" />
+        android:focusable="false">
 
         <include
             layout="@layout/game_table_seat_south"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="@dimen/standard_margin"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/colorPrimary" />
+            android:background="@color/colorPrimary"
+            tools:ignore="RtlHardcoded" />
 
-    </LinearLayout>
+        <include
+            layout="@layout/game_table_seat_north"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/standard_margin"
+            android:layout_alignParentLeft="true"
+            android:background="@color/purpleDark"
+            tools:ignore="RtlHardcoded" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
