--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,8 +46,10 @@
     <style name="TextViewTableSeat" parent="AppTheme">
         <item name="android:textColor">@color/grayMM</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:lines">1</item>
-        <item name="android:maxLength">9</item>
+        <item name="android:gravity">center</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:ellipsize">end</item>
         <item name="android:includeFontPadding">true</item>
     </style>
 
