--- a/app/src/main/res/layout/game_table_seat_east.xml
+++ b/app/src/main/res/layout/game_table_seat_east.xml
@@ -18,15 +18,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rlTableSeatEastContainer"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingTop="@dimen/double_standard_margin">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/ivTableSeatEastSeatWindIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:paddingBottom="@dimen/standard_margin"
         android:scaleType="centerInside"
         tools:ignore="ContentDescription"
         tools:src="@drawable/ic_east" />
@@ -38,9 +36,21 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/ivTableSeatEastSeatWindIcon"
         android:layout_centerHorizontal="true"
-        android:paddingBottom="@dimen/half_standard_margin"
         android:textSize="@dimen/table_player_points_text_size"
         tools:text="-000" />
+
+    <TextView
+        android:id="@+id/tvTableSeatEastPenaltyPoints"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvTableSeatEastPoints"
+        android:layout_centerHorizontal="true"
+        android:textSize="@dimen/table_player_penalty_points_text_size"
+        android:textStyle="normal"
+        android:visibility="invisible"
+        android:layout_marginTop="-8dp"
+        tools:text="@string/_000"
+        tools:visibility="visible" />
 
     <View
         android:id="@+id/vGameTableSeatEastAuxStart"
@@ -59,27 +69,13 @@
         android:layout_toEndOf="@+id/tvTableSeatEastPoints" />
 
     <TextView
-        android:id="@+id/tvTableSeatEastPenaltyPoints"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/tvTableSeatEastPoints"
-        android:layout_marginLeft="@dimen/half_standard_margin"
-        android:layout_marginBottom="12dp"
-        android:layout_toRightOf="@+id/tvTableSeatEastPoints"
-        android:textSize="@dimen/table_player_penalty_points_text_size"
-        android:textStyle="normal"
-        android:visibility="gone"
-        tools:ignore="RtlHardcoded"
-        tools:text="-000"
-        tools:visibility="visible" />
-
-    <TextView
         android:id="@+id/tvTableSeatEastName"
         style="@style/TextViewTableSeat"
-        android:layout_width="wrap_content"
+        android:layout_width="180sp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvTableSeatEastPoints"
+        android:layout_below="@+id/tvTableSeatEastPenaltyPoints"
         android:layout_centerHorizontal="true"
-        android:text="@string/player_east_name" />
+        android:ellipsize="end"
+        tools:text="@string/player_name_placeholder"/>
 
 </RelativeLayout>
