--- a/app/src/main/res/layout/custom_discarder_selector.xml
+++ b/app/src/main/res/layout/custom_discarder_selector.xml
@@ -20,6 +20,7 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:layout_marginStart="@dimen/standard_margin"
+    android:layout_marginTop="@dimen/standard_margin"
     android:layout_marginEnd="@dimen/standard_margin"
     android:gravity="center_horizontal"
     android:orientation="vertical"
@@ -31,14 +32,16 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="@dimen/standard_margin"
         android:tag="false">
 
         <TextView
             android:id="@+id/tvDiscarderSelectorWestName"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="@string/player_west"
+            android:maxLines="1"
+            android:gravity="center_horizontal"
+            android:ellipsize="end"
             android:textColor="@color/grayMM"
             android:textSize="24sp" />
 
@@ -70,10 +73,11 @@
 
             <TextView
                 android:id="@+id/tvDiscarderSelectorNorthName"
-                android:layout_width="120dp"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:gravity="center_horizontal"
                 android:lines="1"
+                android:ellipsize="end"
                 android:text="@string/player_north"
                 android:textColor="@color/grayMM"
                 android:textSize="24sp" />
@@ -100,11 +104,12 @@
 
             <TextView
                 android:id="@+id/tvDiscarderSelectorSouthName"
-                android:layout_width="120dp"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:gravity="center_horizontal"
                 android:lines="1"
                 android:text="@string/player_south"
+                android:ellipsize="end"
                 android:textColor="@color/grayMM"
                 android:textSize="24sp" />
 
@@ -131,11 +136,14 @@
 
         <TextView
             android:id="@+id/tvDiscarderSelectorEastName"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="@string/player_east"
             android:textColor="@color/grayMM"
+            android:gravity="center_horizontal"
             android:textSize="24sp"
+            android:ellipsize="end"
+            android:lines="1"
             android:textStyle="bold"
             tools:textColor="@color/colorPrimary" />
 
