--- a/app/src/main/res/layout/game_table_seat_north.xml
+++ b/app/src/main/res/layout/game_table_seat_north.xml
@@ -69,7 +69,7 @@
     <TextView
         android:id="@+id/tvTableSeatNorthName"
         style="@style/TextViewTableSeat"
-        android:layout_width="180sp"
+        android:layout_width="164dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:layout_below="@+id/tvTableSeatNorthPenaltyPoints"
