--- a/app/src/main/res/layout/game_discarder_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_discarder_dialog_fragment.xml
@@ -17,6 +17,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:gravity="center_horizontal"
     android:orientation="vertical">
 
     <TextView
@@ -36,6 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:gravity="center"
         android:layout_marginBottom="@dimen/standard_margin" />
 
     <RelativeLayout
