--- a/app/src/main/res/xml/data_extraction_rules.xml
+++ b/app/src/main/res/xml/data_extraction_rules.xml
@@ -1,4 +1,4 @@
-/*
+<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2020  Ernesto Vega de la Iglesia Soria
 
     This program is free software: you can redistribute it and/or modify
@@ -13,19 +13,9 @@
 
     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <https://www.gnu.org/licenses/>.
-*/
-package com.etologic.mahjongscoring2;
+-->
+<data-extraction-rules>
+    <cloud-backup>
 
-import android.content.Context;
-
-import com.etologic.mahjongscoring2.repository.MockLocalDataSource;
-
-import androidx.annotation.NonNull;
-
-public class BaseInjector {
-
-    @SuppressWarnings("unused")
-    static DataProvider provideDataSource(@NonNull Context context) {
-        return DataProvider.getInstance(new MockLocalDataSource());
-    }
-}
+    </cloud-backup>
+</data-extraction-rules>
