Fixed Lint issues

--- a/app/src/main/res/layout/game_list_fragment.xml
+++ b/app/src/main/res/layout/game_list_fragment.xml
@@ -18,6 +18,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/white">
 
     <LinearLayout
@@ -118,7 +119,7 @@
             android:layout_toStartOf="@+id/vGameListEmptyStateCenter"
             android:rotation="160"
             android:src="@drawable/arrow"
-            android:tint="@color/gray"
+            app:tint="@color/gray"
             tools:ignore="ContentDescription" />
 
         <View
@@ -134,7 +135,7 @@
             android:layout_centerHorizontal="true"
             android:importantForAccessibility="no"
             android:src="@drawable/img_empty_box"
-            android:tint="@color/gray" />
+            app:tint="@color/gray" />
 
     </RelativeLayout>
 
