--- a/app/src/main/res/layout/game_points_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_points_dialog_fragment.xml
@@ -15,11 +15,13 @@
     along with this program.  If not, see <https://www.gnu.org/licenses/>.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@android:color/white"
     android:orientation="vertical"
-    android:padding="@dimen/standard_margin">
+    android:padding="@dimen/standard_margin"
+    tools:ignore="Overdraw">
 
     <TextView
         android:layout_width="match_parent"
