--- a/app/src/main/res/layout/game_table_seat_west.xml
+++ b/app/src/main/res/layout/game_table_seat_west.xml
@@ -45,10 +45,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvTableSeatWestPoints"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="-8dp"
         android:textSize="@dimen/table_player_penalty_points_text_size"
         android:textStyle="normal"
         android:visibility="invisible"
-        android:layout_marginTop="-8dp"
         tools:text="@string/_000"
         tools:visibility="visible" />
 
@@ -71,8 +71,8 @@
         style="@style/TextViewTableSeat"
         android:layout_width="164dp"
         android:layout_height="wrap_content"
-        android:ellipsize="end"
         android:layout_below="@+id/tvTableSeatWestPenaltyPoints"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:ellipsize="end" />
 
 </RelativeLayout>
