--- a/app/src/main/res/layout/game_players_dialog_fragment.xml
+++ b/app/src/main/res/layout/game_players_dialog_fragment.xml
@@ -46,7 +46,8 @@
                     android:drawablePadding="@dimen/standard_margin"
                     android:inputType="textPersonName|textAutoComplete|textCapSentences"
                     android:maxLength="14"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:selectAllOnFocus="true" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -63,7 +64,8 @@
                     android:drawablePadding="@dimen/standard_margin"
                     android:inputType="textPersonName|textAutoComplete|textCapSentences"
                     android:maxLength="14"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:selectAllOnFocus="true" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -80,7 +82,8 @@
                     android:drawablePadding="@dimen/standard_margin"
                     android:inputType="textPersonName|textAutoComplete|textCapSentences"
                     android:maxLength="14"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:selectAllOnFocus="true" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -97,7 +100,8 @@
                     android:drawablePadding="@dimen/standard_margin"
                     android:inputType="textPersonName|textAutoComplete|textCapSentences"
                     android:maxLength="14"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:selectAllOnFocus="true" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
